# SPIRV-Enums

./: README.md  pyproject.toml
spirv_enums/: __init__.py
